--- a/source/sass/blocks/socials.scss
+++ b/source/sass/blocks/socials.scss
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  flex-wrap: wrap;
 
   @include vp-1023 {
     margin-left: 0;
